Feature: add http module type (#104)
Add Api-Server Http request and response module type

---------
